Fix broken code sample section spacing in the Doxygen documentation due to a missing line-height CSS property.

--- a/LUFA/DoxygenPages/Style/Style.css
+++ b/LUFA/DoxygenPages/Style/Style.css
@@ -247,6 +247,7 @@ div.fragment {
 div.line {
 	font-family: monospace, fixed;
 	font-size: 13px;
+	min-height: 13px;
 	line-height: 1.0;
 	text-wrap: unrestricted;
 	white-space: -moz-pre-wrap; /* Moz */
